<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verruga_bruja"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="33dp"
        android:background="@color/verruga_bruja"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:queryHint="@string/hint_busc"
            android:background="@drawable/shape" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/r1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <RadioButton
                    android:id="@+id/libro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/libro"
                    android:textColor="@color/fantasma"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/revista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/revista"
                    android:textColor="@color/fantasma"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/todos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todos"
                    android:textColor="@color/fantasma"
                    android:textSize="20dp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/r2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <RadioButton
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:textColor="@color/fantasma"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/autor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fantasma"
                    android:buttonTint="@color/fantasma"
                    android:drawableTint="@color/fantasma"
                    android:foregroundTint="@color/fantasma"
                    android:shadowColor="@color/fantasma"
                    android:text="@string/autor"
                    android:textColor="@color/fantasma"
                    android:textColorHighlight="@color/fantasma"
                    android:textColorHint="@color/fantasma"
                    android:textColorLink="@color/caramelo"
                    android:textSize="20dp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rId"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>